@@ -1,3 +1,7 @@
+2003-10-17  Bruno Haible  <bruno@clisp.org>
+
+	* binary-io.h: Avoid warnings on Cygwin.
+
 2003-10-09  Bruno Haible  <bruno@clisp.org>
 
 	* xalloc.h: Renamed from xmalloc.h.
